fix navbar has gap between its sub-navbar

--- a/DCC/client/css/style.css
+++ b/DCC/client/css/style.css
@@ -66,7 +66,9 @@ textarea {
 /*------------------------------------------------------------------
 [2. Navbar / .navbar]
 */
-
+.navbar {
+    margin-bottom: 0;
+}
 .navbar .container {
 	position: relative;
 }
